k8s/fluentbit-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentbit
  labels:
    k8s-app: fluentbit
spec:
  selector:
    matchLabels:
      k8s-app: fluentbit
  template:
    metadata:
      labels:
        k8s-app: fluentbit
    spec:
      serviceAccountName: fluentbit-sa
      containers:
        - name: fluentbit
          image: fluent/fluent-bit:1.8
          ports:
            - containerPort: 2020
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: config
              mountPath: /fluent-bit/etc/
              subPath: fluent-bit.conf
            - name: config
              mountPath: /fluent-bit/etc/parsers.conf
              subPath: parsers.conf
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: config
          configMap:
            name: fluentbit-config
