k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: yair23/nginx:latest # Use your new image here
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-files
              mountPath: /opt/status-page/statuspage/static # Path where NGINX will look for static files
          resources:
            requests:
              cpu: "100m"    # Request for CPU resources
              memory: "128Mi" # Request for memory resources
            limits:
              cpu: "500m"    # Limit for CPU resources
              memory: "256Mi" # Limit for memory resources
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: static-pvc
