k8s/kibana.yaml
# kibana-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  type: NodePort  # or ClusterIP if you're using port-forward
  ports:
    - port: 5601
      targetPort: 5601
      nodePort: 30001  # Optional, if using NodePort
  selector:
    app: kibana 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.5.0
          ports:
            - containerPort: 5601
