k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80         # Service port to expose
    targetPort: 80   # Port on the NGINX container
    nodePort: 30080  # Exposed port on each Node
  selector:
    app: nginx
