k8s/redis-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
spec:
  type: ClusterIP
  ports:
    - name: redis-exporter
      port: 9121
      targetPort: 9121

  selector:
    app: redis-exporter
