k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: your-alb-group-name # Optional for ALB grouping
    alb.ingress.kubernetes.io/certificate-arn: <your-acm-certificate-arn>
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
spec:
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                namespace: monitoring
                port:
                  number: 3000
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana-service
                namespace: elastic-stack
                port:
                  number: 5601
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
  tls:
    - hosts:
        - your-domain.com
      secretName: your-tls-secret # Optional if storing cert in Kubernetes
